kubernetes files/shortify-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortify-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortify-backend
  template:
    metadata:
      labels:
        app: shortify-backend
    spec:
      containers:
      - name: shortify-backend
        image: 241533151582.dkr.ecr.ap-south-1.amazonaws.com/global/shortify:backend  
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ecr-secret
