kubernetes files/shortify-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortify-backend-service
spec:
  selector:
    app: shortify-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
