kubernetes files/shortify-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortify-frontend-service
spec:
  selector:
    app: shortify-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
