kubernetes files/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortify-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.shortify.site  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shortify-frontend-service  
            port:
              number: 80
